# open5gs-cmake

./: CMakeLists.txt
cmake/Modules/: freeDiameter.cmake
configs/: CMakeLists.txt
configs/freeDiameter/: CMakeLists.txt
configs/logrotate/: CMakeLists.txt
configs/newsyslog/: CMakeLists.txt
configs/open5gs/: CMakeLists.txt
configs/systemd/: CMakeLists.txt
lib/: CMakeLists.txt
lib/app/: CMakeLists.txt
lib/asn1c/common/: CMakeLists.txt
lib/asn1c/ngap/: CMakeLists.txt
lib/asn1c/s1ap/: CMakeLists.txt
lib/asn1c/util/: CMakeLists.txt
lib/core/: CMakeLists.txt  core-config-private.h.in  core-config.h.in
lib/crypt/: CMakeLists.txt
lib/dbi/: CMakeLists.txt
lib/diameter/: meson.build
lib/diameter/common/: CMakeLists.txt
lib/diameter/cx/: CMakeLists.txt
lib/diameter/gx/: CMakeLists.txt
lib/diameter/rx/: CMakeLists.txt
lib/diameter/s6a/: CMakeLists.txt
lib/gtp/: CMakeLists.txt
lib/ipfw/: CMakeLists.txt
lib/nas/5gs/: CMakeLists.txt
lib/nas/common/: CMakeLists.txt
lib/nas/eps/: CMakeLists.txt
lib/ngap/: CMakeLists.txt
lib/pfcp/: CMakeLists.txt  pfcp-config.h.in
lib/s1ap/: CMakeLists.txt
lib/sbi/: CMakeLists.txt
lib/sbi/openapi/: CMakeLists.txt
lib/sctp/: CMakeLists.txt  sctp-config.h.in
lib/tun/: CMakeLists.txt
misc/: CMakeLists.txt
misc/db/: CMakeLists.txt
misc/db/python/: SchemaUpdater.py
src/: CMakeLists.txt  version.h.in
src/amf/: CMakeLists.txt  context.c  gmm-build.c  gmm-handler.c  gmm-sm.c  ngap-handler.c
src/ausf/: CMakeLists.txt
src/hss/: CMakeLists.txt  hss-fd-path.c
src/mme/: CMakeLists.txt
src/nrf/: CMakeLists.txt
src/nssf/: CMakeLists.txt
src/pcf/: CMakeLists.txt
src/pcrf/: CMakeLists.txt
src/sgwc/: CMakeLists.txt
src/sgwu/: CMakeLists.txt
src/smf/: CMakeLists.txt  smf-config.h.in
src/udm/: CMakeLists.txt
src/udr/: CMakeLists.txt
src/upf/: CMakeLists.txt
tests/: CMakeLists.txt
tests/app/: CMakeLists.txt
tests/common/: CMakeLists.txt  test-config-private.h.in
tests/core/: CMakeLists.txt
tests/crypt/: CMakeLists.txt
tests/registration/: CMakeLists.txt  ue-context-test.c
tests/sctp/: CMakeLists.txt
tests/unit/: CMakeLists.txt
webui/.next/: commons.js  main.js  manifest.js
webui/.next/bundles/pages/: _document.js  _error.js
